--- a/ZipKifuBrowser/res/layout/list_summary_item.xml
+++ b/ZipKifuBrowser/res/layout/list_summary_item.xml
@@ -1,6 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:orientation="vertical"
 	android:layout_height="wrap_content" android:layout_width="fill_parent">
-	<TextView android:layout_height="wrap_content" android:id="@+id/syousaiTextView"
-		android:textSize="40px" android:layout_marginTop="6px" android:layout_width="fill_parent"></TextView>
+
+	<LinearLayout
+	    xmlns:android="http://schemas.android.com/apk/res/android"
+	    android:layout_width="fill_parent"
+		android:orientation="horizontal"
+	    android:layout_height="wrap_content" >
+
+		<TextView android:layout_height="wrap_content" android:id="@+id/beginDateTextView"
+			android:textSize="16px" android:layout_marginTop="6px" android:layout_width="wrap_content"></TextView>
+		<TextView android:layout_height="wrap_content" android:id="@+id/syousaiTextView"
+			android:textSize="16px" android:layout_marginTop="6px" android:layout_marginLeft="10dip"  android:layout_width="wrap_content"></TextView>
+		<TextView android:layout_height="wrap_content" android:text="["
+			android:textSize="16px" android:layout_marginTop="6px" android:layout_marginLeft="10dip"  android:layout_width="wrap_content"></TextView>
+		<TextView android:layout_height="wrap_content" android:id="@+id/senkeiTextView"
+			android:textSize="16px" android:layout_marginTop="6px" android:layout_width="wrap_content"></TextView>
+		<TextView android:layout_height="wrap_content" android:text="]"
+			android:textSize="16px" android:layout_marginTop="6px" android:layout_width="wrap_content"></TextView>
+	</LinearLayout>
+	<LinearLayout
+	    xmlns:android="http://schemas.android.com/apk/res/android"
+	    android:layout_width="fill_parent"
+		android:orientation="horizontal"
+	    android:layout_height="wrap_content" >
+	    	<TextView android:layout_height="wrap_content" android:id="@+id/senteTextView"
+				android:textSize="24px" android:layout_marginTop="6px" android:layout_width="wrap_content"></TextView>
+			<TextView android:layout_height="wrap_content" android:text="-" android:layout_marginLeft="10dip" 
+				android:textSize="24px" android:layout_marginTop="6px" android:layout_width="wrap_content"></TextView>
+			<TextView android:layout_height="wrap_content" android:id="@+id/goteTextView"
+				android:textSize="24px" android:layout_marginTop="6px" android:layout_marginLeft="10dip"  android:layout_width="wrap_content"></TextView>
+	</LinearLayout>	    	
 </LinearLayout>
